Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
Description
The original logic would set up a do_io_read for max_int in HttpSM::attach_server_session.
However, at this point there still may be things finishing up in the user_agent to server tunnel (for posts). We were seeing occasional cases of the EOS for the tunnel to user_agent communication being incorrectly delivered to the consumer of the user_agent to server tunnel.
It is sufficient to set up a 0 length read in HttpSM::attach_server_session. This will enable the correct handlers to deal with inactivity timeouts. Then we can setup the real read in HttpSM::setup_server_read_response_header() after we know that the user_agent to origin server tunnel has been taken down.
Attachments
Attachments
Issue Links
- is part of
-
TS-3105 Combination of fixes for TS-3084 and TS-3073 causing asserts and segfaults on 5.1 and beyond
-
- Closed
-